--- a/trainers/templates/trainers/schedule.html
+++ b/trainers/templates/trainers/schedule.html
@@ -2,6 +2,8 @@
 
 {% block head %}
 <link href="../../../static/css/schedule.css" rel="stylesheet">
+<link rel="stylesheet" href="../../../static/css/btns.css">
+
 {% endblock %}
 {% block content %}
 <script>
