--- a/trainers/templates/trainers/clients.html
+++ b/trainers/templates/trainers/clients.html
@@ -3,16 +3,39 @@
 {% block head %}
 <link rel="stylesheet" href="../../../static/css/students.css">
 <link rel="stylesheet" href="../../../static/css/form.css">
+<link rel="stylesheet" href="../../../static/css/btns.css">
+<link rel="stylesheet" href="../../../static/css/edit_modal.css">
 {% endblock %}
 
 {% block content %}
 <div id="main_student_content">
     <div id="buttons">
-    <button id="all_clients_btn" class="change_btn" onclick="showAllClients()">Все клиенты</button>
-    <button id="all_groups_btn" class="change_btn" onclick="showAllGroups()">Группы</button>
-    <button id="all_sports_btn" class="change_btn" onclick="showAllSports()">Вид спорта</button>
+        <button id="all_clients_btn" class="change_btn" onclick="showAllClients()">Все клиенты</button>
+        <button id="all_groups_btn" class="change_btn" onclick="showAllGroups()">Группы</button>
+        <button id="all_sports_btn" class="change_btn" onclick="showAllSports()">Вид спорта</button>
     </div>
+
     <div id="all_clients">
+        <button class="change_btn" onclick="modal_client()">Добавить клиента</button>
+        <div class="modal" id="modal_client">
+            <div class="modal-content">
+                <div class="close" id="close_client">&times;</div>
+                <form class="decor" action="{% url 'client_add_action' %}" method="post">
+                    {% csrf_token %}
+                    <div class="form-left-decoration"></div>
+                    <div class="form-right-decoration"></div>
+                    <div class="circle"></div>
+                    <div class="form-inner">
+                        <h3>Добавление клиента</h3>
+                        <input type="text" name="client_name" id="client_name" placeholder="Имя">
+                        <input type="text" name="client_surname" id="client_surname" placeholder="Фамилия">
+                        <input type="date" name="client_birthdate" id="client_birthdate"
+                               placeholder="Дата рождения">
+                        <input type="submit" value="Добавить">
+                    </div>
+                </form>
+            </div>
+        </div>
         <div class="cards">
             {%if clients%}
             {% for client in clients %}
@@ -45,64 +68,13 @@
             <p>Нет клиентов</p>
             {%endif%}
         </div>
-        <div class="common_form">
-            <button class="change_btn" onclick="showClientForm()">Добавить клиента</button>
-            <div class="form" id="form_add_client">
-                <form class="decor" action="{% url 'client_add_action' %}" method="post">
-                    {% csrf_token %}
-                    <div class="form-left-decoration"></div>
-                    <div class="form-right-decoration"></div>
-                    <div class="circle"></div>
-                    <div class="form-inner">
-                        <h3>Добавление клиента</h3>
-                        <input type="text" name="client_name" id="client_name" placeholder="Имя">
-                        <input type="text" name="client_surname" id="client_surname" placeholder="Фамилия">
-                        <input type="date" name="client_birthdate" id="client_birthdate"
-                               placeholder="Дата рождения">
-                        <input type="submit" value="Добавить">
-                    </div>
-                </form>
-            </div>
-        </div>
     </div>
+
     <div id="all_groups">
-        <div class="cards">
-            {%if teams%}
-            {% for team in teams %}
-            <details>
-                <summary> {{team.name}} | {{team.trainer.user.last_name}} {{team.trainer.user.first_name}}
-                    {{team.trainer.otchestv}}
-                </summary>
-                <div class="cards_elements">
-                    {% for client in team.clients.all %}
-                    <div class="card">
-                        <div class="front">
-                            <p>{{client.birth_date}}</p>
-                            <h1>
-                                {{client.first_name}} {{client.last_name}}
-                            </h1>
-                            <p>Студент.Описание
-                            </p>
-                        </div>
-                        <div class="back">
-                            <p>{{client.birth_date}}</p>
-                            <h1>
-                                {{client.first_name}} {{client.last_name}}
-                            </h1>
-                            <p><a href="client/{{client.id}}">Студент.Ссылка</a></p>
-                        </div>
-                    </div>
-                    {% endfor %}
-                </div>
-            </details>
-            {% endfor %}
-            {% else %}
-            <p>Нет групп</p>
-            {%endif%}
-        </div>
-        <div class="common_form">
-            <button class="change_btn" onclick="showGroupForm()"> Создать группу</button>
-            <div class="form" id="form_add_team">
+        <button class="change_btn" onclick="modal_group()"> Создать группу</button>
+        <div class="modal" id="modal_group">
+            <div class="modal-content">
+                <div class="close" id="close_group">&times;</div>
                 <form class="decor" action="#" method="post">
                     {% csrf_token %}
                     <div class="form-left-decoration"></div>
@@ -149,16 +121,51 @@
                 </form>
             </div>
         </div>
+        <div class="cards">
+            {%if teams%}
+            {% for team in teams %}
+            <details>
+                <summary> {{team.name}} | {{team.trainer.user.last_name}} {{team.trainer.user.first_name}}
+                    {{team.trainer.otchestv}}
+                </summary>
+                <div class="cards_elements">
+                    {% for client in team.clients.all %}
+                    <div class="card">
+                        <div class="front">
+                            <p>{{client.birth_date}}</p>
+                            <h1>
+                                {{client.first_name}} {{client.last_name}}
+                            </h1>
+                            <p>Студент.Описание
+                            </p>
+                        </div>
+                        <div class="back">
+                            <p>{{client.birth_date}}</p>
+                            <h1>
+                                {{client.first_name}} {{client.last_name}}
+                            </h1>
+                            <p><a href="client/{{client.id}}">Студент.Ссылка</a></p>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </details>
+            {% endfor %}
+            {% else %}
+            <p>Нет групп</p>
+            {%endif%}
+        </div>
     </div>
+
     <div id="all_sports">
-       {% for sport, teams in teams_by_sport.items %}
-    <h3>{{ sport }} ({{ teams.count }})</h3>
-    <ul>
-        {% for team in teams %}
+        {% for sport, teams in teams_by_sport.items %}
+        <h3>{{ sport }} ({{ teams.count }})</h3>
+        <ul>
+            {% for team in teams %}
             <li>{{ team.name }}</li>
+            {% endfor %}
+        </ul>
         {% endfor %}
-    </ul>
-{% endfor %}
     </div>
 </div>
 
@@ -166,4 +173,27 @@
 
 {% block js%}
 <script src="../../../static/js/buttons.js"></script>
+<script>
+    let modal = document.querySelector('#modal_client');
+
+    function modal_client() {
+        modal.style.display = 'block';
+    }
+
+    let btn = document.querySelector('#close_client');
+    btn.onclick = function () {
+        modal.style.display = 'none';
+    }
+
+
+    let modal2 = document.querySelector('#modal_group');
+
+    function modal_group() {
+        modal2.style.display = 'block';
+    }
+
+    let btn2 = document.querySelector('#close_group');
+    btn2.onclick = function () {
+        modal2.style.display = 'none';
+    }</script>
 {% endblock %}
