--- a/trainers/templates/trainers/main.html
+++ b/trainers/templates/trainers/main.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="../../../static/css/form.css">
 <link rel="stylesheet" href="../../../static/css/edit_modal.css">
 <link rel="stylesheet" href="../../../static/css/btns.css">
+<link rel="stylesheet" href="../../../static/css/search.css">
 {% endblock %}
 
 {% block content %}
@@ -88,7 +89,6 @@
         <input type="text" placeholder="Что желаете найти?">
         <button>Найти</button>
     </div>
-
 </div>
 
 
