--- a/trainers/templates/trainers/trainers.html
+++ b/trainers/templates/trainers/trainers.html
@@ -12,12 +12,21 @@
 
 <div id="search_div">
     <h3>Поиск</h3>
-    <div class="sub">
-        <input type="text" placeholder="Кого желаете найти?">
-        <button>Найти</button>
-    </div>
+    <form method="get">
+        <div class="sub">
+            <input type="text" placeholder="Кого желаете найти?" name="q" value="{{ query }}">
+            <button type="submit">Найти</button>
+        </div>
+    </form>
 </div>
 
+<ul>
+    {% for trainer in trainers_search %}
+    <li>{{ trainer.first_name }} ({{ trainer.email }})</li>
+    {% empty %}
+    <li>Клиенты не найдены</li>
+    {% endfor %}
+</ul>
 
 <div id="trainers_content">
     <button id="add_trainer_button" class="change_btn" onclick="modal_trainer()"> Добавить тренера</button>
@@ -52,7 +61,10 @@
             {% for trainer in trainers %}
             <div class="card">
                 <div class="front">
-                    <p>{{trainer.birthdate}} {% if trainer in upcoming_birthdays %} 🍰 {% endif %} {% if trainer in today_birthdays %} 🎂 {% endif %}</p>
+                    <p>{{trainer.birthdate}}
+                        {% if trainer in upcoming_birthdays %} 🍰 {% endif %}
+                        {% if trainer in today_birthdays %} 🎂 {% endif %}
+                    </p>
                     <h2>
                         {{trainer.user.last_name}} <br> {{trainer.user.first_name}} <br> {{trainer.otchestv}}
                     </h2>
@@ -60,7 +72,10 @@
                     </p>
                 </div>
                 <div class="back">
-                    <p>{{trainer.birthdate}} {% if trainer in upcoming_birthdays %} 🍰 {% endif %} {% if trainer in today_birthdays %} 🎂 {% endif %}</p>
+                     <p>{{trainer.birthdate}}
+                        {% if trainer in upcoming_birthdays %} 🍰 {% endif %}
+                        {% if trainer in today_birthdays %} 🎂 {% endif %}
+                    </p>
                     <h2>
                         {{trainer.user.last_name}} <br> {{trainer.user.first_name}} <br> {{trainer.otchestv}}
                     </h2>
