--- a/static/css/students.css
+++ b/static/css/students.css
@@ -2,7 +2,7 @@
 .cards {
     overflow: hidden;
     height: 100%;
-    padding-right: 2em;
+    width: 100%;
     min-height: 650px;
 }
 
@@ -12,7 +12,7 @@
     justify-content: space-around;
     align-items: flex-start;
     flex-wrap: wrap;
-    margin-bottom: 120px;
+    margin-bottom: 70px;
 }
 
 .card {
