add styles for trainers.html

--- a/trainers/templates/trainers/clients.html
+++ b/trainers/templates/trainers/clients.html
@@ -50,7 +50,7 @@
                             <h1>
                                 {{client.first_name}} {{client.last_name}}
                             </h1>
-                            <p>Студент.Описание
+                            <p>{{client.status}}
                             </p>
                         </div>
                         <div class="back">
@@ -136,7 +136,7 @@
                             <h1>
                                 {{client.first_name}} {{client.last_name}}
                             </h1>
-                            <p>Студент.Описание
+                            <p>{{client.status}}
                             </p>
                         </div>
                         <div class="back">
