--- a/trainers/templates/trainers/trainers.html
+++ b/trainers/templates/trainers/trainers.html
@@ -12,8 +12,8 @@
     <h3>Поиск</h3>
     <form method="get">
         <div class="sub">
-            <input type="text" placeholder="Кого желаете найти?" name="q" value="{{query}}">
-            <button onclick="search_trainers()" type="submit">Найти</button>
+            <input type="text" placeholder="Кого желаете найти?" name="q">
+            <button type="submit">Найти</button>
         </div>
     </form>
 </div>
