--- a/static/css/students.css
+++ b/static/css/students.css
@@ -1,9 +1,14 @@
-
 .cards {
     overflow: hidden;
-    height: 100%;
+    /*height: 100%;*/
     width: 100%;
-    min-height: 650px;
+    min-height: 300px;
+    /*display: flex;*/
+    /*flex-direction: row;*/
+    /*justify-content: space-around;*/
+    /*align-items: center;*/
+    /*flex-wrap: wrap;*/
+    /*text-align: center;*/
 }
 
 .cards_elements {
@@ -12,7 +17,7 @@
     justify-content: space-around;
     align-items: flex-start;
     flex-wrap: wrap;
-    margin-bottom: 70px;
+    height: 100%;
 }
 
 .card {
@@ -22,7 +27,7 @@
     width: calc((100% - 1500px) / 2);
     height: 250px;
     cursor: pointer;
-    transform: translate(-15%, 16%);
+    transform: translate(-30%, 0%);
     border-radius: 30px;
     z-index: 3;
     font-size: 0.8em;
@@ -82,6 +87,10 @@ summary {
 .add_group {
     margin-top: 10em;
     color: #293241;
+}
+
+#search_cards{
+       padding-bottom: 2em;
 }
 
 @media (max-width: 1150px) {
