--- a/static/css/slider.css
+++ b/static/css/slider.css
@@ -23,6 +23,7 @@
     margin-bottom: 20px;
     opacity: 0;
     margin-top: 100px;
+    width: 50em;
 }
 
 
@@ -30,13 +31,9 @@
     color: #293241;
 }
 
-.slider .slider-text h1 {
+.slider .slider-text h3 {
     color: #293241;
     padding-bottom: 60px;
-}
-
-.slider .slider-text p {
-    color: #293241;
 }
 
 .slider .slider-field.active {
